--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -37,6 +37,7 @@ body {
     width: 90%;
     vertical-align: middle;
     text-align: center;
+    resize: horizontal;
     padding-top: 18px;
     padding-bottom: 18px;
     border-radius:10px;
