--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,11 @@
                 <input type="text" id="flink" name="flink" placeholder="article URL..."><br>
                 <input type="submit" value="UnBlock Article!">
             </form>             
-            <div id="textBody">
+            <div id="textH1">
                 {{ text1 }}
+            </div>
+            <div id="textP">
+                {{ text2 }}
             </div>
         </div>
     </body>
