--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,67 +1,185 @@
-body {
-    margin: 0 auto;
-    padding: 0;
-    background: rgb(0, 0, 0);
-  }
-  
-  #parent {
-    position: relative;
-    margin: 0 auto;
-    height: 100vh;
-    margin-bottom: 30%;
-    display: flex;
-    justify-content: center;
-    word-wrap: break-word;
-  }
-
-  #search {
-    margin: 0;
-    top: 10px;
-    position: absolute;
-    width: 90%;
-    vertical-align: middle;
-    text-align: center;
-    padding-top: 18px;
-    padding-bottom: 18px;
-    border-radius:10px;
-    box-shadow:0 0 15px 4px rgba(255, 0, 0, 0.308);
-  }
-
-#flink {
-  width: 98%;
-  resize: horizontal;
-  vertical-align: middle;
-  text-align: center;
+* {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
 }
 
-  #textH1 {
+body {
     margin: 0;
-    position: absolute;
-    vertical-align: middle;
+    padding: 0;
+    background-color: #101111;
+    color: #03A062;
+    overflow-x: hidden;
+    /* Prevent horizontal scrollbar */
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    width: 100%;
+    /* Ensure header and footer span full width */
+    box-sizing: border-box;
+    /* Include padding in element's total width */
+    position: relative;
+    /* To position the toggle inside the header */
+}
+
+.gihub-repo {
+    max-width: 800px;
+    width: 100%;
+}
+
+.fork-me {
+  width: 170px;
+  height: 170px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 9999;
+}
+
+.search {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    width: 100%;
     text-align: center;
-    width: 75%;
-    height: 50%;
-    top: 40%;
-    transform: translateY(-50%);
+}
+
+.flink {
+    max-width: 800px;
+    width: 100%;
+}
+
+ /* Style the button that is used to open and close the collapsible content */
+ .collapsible {
+    background-color: #101111;
+    color: #03A062;
+    cursor: pointer;
+    padding: 5px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: #333333;
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    color: #03A062;
+    display: none;
+    overflow: hidden;
+    background-color: #444444;
+  } 
+
+header {
+    text-align: center;
+    padding: 10px;
+    color: rgb(21, 255, 0);
+}
+
+footer {
+    text-align: center;
+    font-size: 8px;
+    padding: 10px;
+    background-color: #ed3419;
     color: white;
-    font-size: x-large;
-    font-weight: bold;
-    font-style: normal;
-    line-height: 2;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
+a {
+    color: #bb86fc;
+}
+
+.row {
+    display: flex;
+  }
+  
+  .column {
+    flex: 33.33%;
+    padding: 5px;
   }
 
-  #textP {
-    margin: 0;
+.toggle-theme-container {
     position: absolute;
-    vertical-align: middle;
-    text-align: justify;
-    width: 75%; 
-    height: 50%;
-    top: 70%;
-    transform: translateY(-50%);
-    color: white;
-    font-size: large;
-    font-weight: normal;
-    font-style: italic;
-    line-height: 3;
-  }
+    /* To position the toggle inside the header */
+    top: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.toggle-theme-button {
+    position: relative;
+    /* To position the toggle inside the header */
+    top: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.toggle-theme {
+    position: relative;
+    width: 50px;
+    height: 24px;
+    background-color: #292929;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.toggle-theme::before {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border-radius: 50%;
+    top: 2px;
+    left: 2px;
+    transition: transform 0.3s;
+}
+
+.light-theme .toggle-theme {
+    background-color: #cccccc;
+}
+
+.light-theme .toggle-theme::before {
+    transform: translateX(26px);
+}
+
+.light-theme {
+    background-color: #ffffff;
+    color: #292929;
+}
+
+.light-theme h1,
+.light-theme h2,
+.light-theme h3,
+.light-theme h4,
+.light-theme h5,
+.light-theme h6 {
+    color: #333333;
+}
+
+.light-theme a {
+    color: #1a73e8;
+}
+
+.light-theme .collapsible {
+    background-color: #CCCCCC;
+    color: #03A062;
+}
+
+.light-theme .content {
+    background-color: #DCDCDC;
+    color: #03A062;
+}
